--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,8 @@ body {
   width: 100%;
   height: 100vh;
   overflow-x: hidden;
-  background-color: black;
-  color: white;
+  background-color: #f2f2f2;
+  color: black;
 }
 
 header {
