--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ section {
   justify-content: center;
   align-items: center;
   gap: 5rem;
-  background-color: black;
+  background-color: #f2f2f2;
 }
 
 .home-img img {
