--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
   width: 100%;
   height: 100vh;
   overflow-x: hidden;
-  background-color: #f2f2f2;
+  background-color: #f2f2f2 !important;
   color: black;
 }
 
